<resources>
    <string name="app_name">FaceRecognizer</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="tick_sign">tick sign</string>
    <string name="add_employee">Add Employee</string>
    <string name="start_training">Start Training</string>
    <string name="enter_employee_id">Enter employee ID</string>
    <string name="employee_id">Employee ID</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="moving_ball">moving ball</string>
    <string name="progress_knob">progress knob</string>
    <string name="complete_the_progress_bar">complete the progress bar</string>
</resources>